--- a/Resources/Private/Templates/Backend.html
+++ b/Resources/Private/Templates/Backend.html
@@ -4,19 +4,22 @@
 	<div class="c-auth0">
 		<f:if condition="!{error}">
 			<f:then>
+				<f:if condition="{auth0Error}">
+					<f:be.infobox title="{auth0Error}" state="2">{auth0ErrorDescription}</f:be.infobox>
+				</f:if>
+
 				<f:if condition="{userInfo}">
 					<f:then>
 						<p class="info text-center">
 							<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.logged-in-as" />
 							<br/><strong>{userInfo.nickname}</strong>
+							(<a class="" href="/typo3/?loginProvider=1526966635&logout=1"><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.logout.auth0" /></a>)
 						</p>
 						<div class="form-group" id="t3-login-submit-section">
+
 							<button class="btn btn-block btn-login t3js-login-submit" id="t3-login-submit" type="submit" name="commandLI" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> {f:translate(key: 'login.process')}">
 								<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.login.typo3" />
 							</button>
-							<a class="btn btn-block btn-auth0 btn-success" href="/typo3/?loginProvider=1526966635&logout=1">
-								<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.logout.auth0" />
-							</a>
 						</div>
 					</f:then>
 					<f:else>
