--- a/Resources/Private/Layouts/Login.html
+++ b/Resources/Private/Layouts/Login.html
@@ -3,8 +3,8 @@
 		<div class="typo3-login-wrap">
 			<div class="panel panel-lg panel-login">
 				<div class="panel-body">
-					<div class="typo3-login-logo">
-						<img src="/typo3conf/ext/auth0/Resources/Public/Images/logo-blue.png" class="typo3-login-image" alt="" />
+					<div class="auth0-login-logo">
+						<img src="/typo3conf/ext/auth0/Resources/Public/Images/logo-blue.png" class="auth0-login-image" alt="" />
 					</div>
 					<f:if condition="{formType} == 'LoginForm'">
 						<f:then>
