--- a/Resources/Private/Templates/Login/Form.html
+++ b/Resources/Private/Templates/Login/Form.html
@@ -11,7 +11,7 @@
 	</f:if>
 	<f:if condition="{userInfo}">
 		<f:then>
-			<f:link.action action="logout" class="btn btn-block btn-secondary" additionalParams="{logintype: 'logout'}">
+			<f:link.action action="logout" class="btn btn-block btn-secondary">
 				<f:translate key="plugin.login.logout" />
 			</f:link.action>
 		</f:then>
