--- a/Resources/Private/Templates/Backend.html
+++ b/Resources/Private/Templates/Backend.html
@@ -13,10 +13,9 @@
 						<p class="info text-center">
 							<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.logged-in-as" />
 							<br/><strong>{userInfo.nickname}</strong>
-							(<a class="" href="/typo3/?loginProvider=1526966635&logout=1"><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.logout.auth0" /></a>)
+							(<a class="" href="?loginProvider={loginProviderIdentifier}&auth0[action]=logout"><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.logout.auth0" /></a>)
 						</p>
 						<div class="form-group" id="t3-login-submit-section">
-
 							<button class="btn btn-block btn-login t3js-login-submit" id="t3-login-submit" type="submit" name="commandLI" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> {f:translate(key: 'login.process')}">
 								<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.login.typo3" />
 							</button>
@@ -24,10 +23,10 @@
 					</f:then>
 					<f:else>
 						<p class="info text-center">
-								<f:format.html><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.not-logged-in" /></f:format.html>
+							<f:format.html><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.not-logged-in" /></f:format.html>
 						</p>
 						<div class="form-group">
-							<a class="btn btn-block btn-auth0 btn-login" href="/typo3/?loginProvider=1526966635&login=1">
+							<a class="btn btn-block btn-auth0 btn-login" href="/typo3/?loginProvider={loginProviderIdentifier}&auth0[action]=login">
 								<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.login.auth0" />
 							</a>
 						</div>
