--- a/Resources/Public/Styles/backend.css
+++ b/Resources/Public/Styles/backend.css
@@ -39,7 +39,7 @@
 	padding: auto 20px;
 }
 
-.auth0-login .btn-auth0:focus {
+.auth0-login .btn-auth0:focus, .auth0-login:active .btn-auth0:active, .auth0-login:hover .btn-auth0:hover {
 	color: #fff;
 	background-color: #5C666F;
 	border-color: #5C666F;
