--- a/Resources/Private/Templates/Backend/List.html
+++ b/Resources/Private/Templates/Backend/List.html
@@ -5,12 +5,14 @@
 <f:section name="content">
 	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.title" /></h1>
 
-	<f:be.infobox state="-1" title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.title')}">
-		<p>{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.content') -> f:format.html()}</p>
-		<a href="#" class="btn btn-primary">
-			<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.button" />
-		</a>
-	</f:be.infobox>
+	<f:if condition="{settings.roles.fe_users} || {settings.roles.be_users}">
+		<f:be.infobox state="-1" title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.title')}">
+			<p>{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.content') -> f:format.html()}</p>
+			<f:link.action action="acquireTypoScript" class="btn btn-primary">
+				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.button" />
+			</f:link.action>
+		</f:be.infobox>
+	</f:if>
 
 	<f:if condition="{extensionConfiguration.enableFrontendLogin}">
 		<h3><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.frontend.title" /></h3>
