--- a/Resources/Private/Templates/Backend/List.html
+++ b/Resources/Private/Templates/Backend/List.html
@@ -3,28 +3,37 @@
 <f:layout name="Backend" />
 
 <f:section name="content">
-	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.title" /></h1>
+	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.title" /></h1>
 
-	<f:if condition="{settings.roles.fe_users} || {settings.roles.be_users}">
-		<f:be.infobox state="-1" title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.title')}">
-			<p>{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.content') -> f:format.html()}</p>
-			<f:link.action action="acquireTypoScript" class="btn btn-primary">
-				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.infobox.button" />
-			</f:link.action>
-		</f:be.infobox>
-	</f:if>
+	<div class="card-container">
+		<div class="card card-size-fixed-small">
+			<f:render partial="Backend/Card/Header"
+					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.subtitle\')}', icon: 'Icons/Extension.svg'}" />
+			<div class="card-content">
+				<p class="card-text">
+					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.mapping.text"/>
+				</p>
+			</div>
+			<div class="card-footer">
+				<f:link.action action="roles" class="btn btn-default">
+					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.button"/>
+				</f:link.action>
+			</div>
+		</div>
 
-	<f:if condition="{extensionConfiguration.enableFrontendLogin}">
-		<h3><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.frontend.title" /></h3>
-		<f:comment>Default Group: TODO</f:comment>
-		<f:render partial="Backend/UserGroupTable" arguments="{groupMapping: frontendUserGroupMapping, table: 'fe_groups'}"/>
-		<hr />
-	</f:if>
-
-	<f:if condition="{extensionConfiguration.enableFrontendLogin}">
-		<h3><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.backend.title" /></h3>
-		<f:comment>Admin Group: TODO</f:comment>
-		<f:render partial="Backend/UserGroupTable" arguments="{groupMapping: backendUserGroupMapping, table: 'be_groups'}"/>
-		<hr />
-	</f:if>
+		<div class="card card-size-fixed-small">
+			<f:render partial="Backend/Card/Header"
+					  arguments="{title: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.title\')}', subtitle: '{f:translate(key: \'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.subtitle\')}', icon: 'Icons/Extension.svg'}" />
+			<div class="card-content">
+				<p class="card-text">
+					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.metadata.text"/>
+				</p>
+			</div>
+			<div class="card-footer">
+				<f:link.action action="properties" class="btn btn-default">
+					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:list.card.button"/>
+				</f:link.action>
+			</div>
+		</div>
+	</div>
 </f:section>
