--- a/Resources/Private/Templates/Backend/Roles.html
+++ b/Resources/Private/Templates/Backend/Roles.html
@@ -14,6 +14,22 @@
 		</f:be.infobox>
 	</f:if>
 
+	<p><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.key.text"/></p>
+	<f:form action="updateRoles" class="form row">
+		<div class="form-group col-sm-12 col-md-6 col-lg-4">
+			<label for="rolesKey">
+				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.key.label"/>
+			</label>
+			<f:form.textfield id="rolesKey" class="form-control" name="key" value="{yamlConfiguration.roles.key}"/>
+		</div>
+
+		<div class="form-group col-sm-12">
+			<f:form.submit value="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.key.button')}" class="btn btn-primary"/>
+		</div>
+	</f:form>
+
+	<hr>
+
 	<f:if condition="{extensionConfiguration.enableFrontendLogin}">
 		<h2><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:roles.frontend.title" /></h2>
 
