[BUGFIX] Reintroduce language label for new application button

--- a/Resources/Private/Templates/Application/List.html
+++ b/Resources/Private/Templates/Application/List.html
@@ -59,6 +59,6 @@
 
 	<be:link.newRecord table="tx_auth0_domain_model_application" class="btn btn-default" pid="{pid}" returnUrl="{returnUrl}">
 		<core:icon identifier="actions-document-new" size="small"/>
-		<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:menu.button.new"/>
+		<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.new"/>
 	</be:link.newRecord>
 </f:section>
