--- a/Resources/Private/Templates/Application/List.html
+++ b/Resources/Private/Templates/Application/List.html
@@ -5,57 +5,69 @@
 <f:section name="content">
 	<h1><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.title" /></h1>
 
-	<p class="lead">
-		<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.text" />
-		<core:iconForRecord row="{directory}" table="pages" /> {directory.title} ({directory.uid})
-	</p>
+	<f:if condition="{applications}">
+		<f:then>
+			<p class="lead">
+				<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.text" />
+				<core:iconForRecord row="{directory}" table="pages" /> {directory.title} ({directory.uid})
+			</p>
 
-	<div class="panel panel-default">
-		<table class="table table-striped table-hover">
-			<thead>
-			<tr>
-				<th class="col-icon nowrap"></th>
-				<th class="text-nowrap"></th>
-				<th class="text-nowrap">
-					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/Database.xlf:tx_auth0_domain_model_application.title"/>
-				</th>
-				<th class="col-control nowrap"></th>
-			</tr>
-			</thead>
+			<div class="panel panel-default">
+				<table class="table table-striped table-hover">
+					<thead>
+					<tr>
+						<th class="col-icon nowrap"></th>
+						<th class="text-nowrap"></th>
+						<th class="text-nowrap">
+							<f:translate key="LLL:EXT:auth0/Resources/Private/Language/Database.xlf:tx_auth0_domain_model_application.title"/>
+						</th>
+						<th class="col-control nowrap"></th>
+					</tr>
+					</thead>
 
-			<tbody>
-			<f:for each="{applications}" as="application">
-				<tr>
-					<td class="col-icon nowrap">
-						<core:iconForRecord table="tx_auth0_domain_model_application" row="{application}"/>
-					</td>
-					<td class="text-nowrap">{application.uid}</td>
-					<td data-order="{application.title}" class="col-title col-responsive nowrap">
-						<be:link.editRecord uid="{application.uid}" table="tx_auth0_domain_model_application">
-							{application.title}
-						</be:link.editRecord>
-					</td>
-					<td class="col-control nowrap">
-						<div class="btn-group" role="group">
-							<be:link.editRecord uid="{application.uid}" table="tx_auth0_domain_model_application" class="btn btn-default">
-								<core:icon identifier="actions-open" size="small"/>
-							</be:link.editRecord>
-							<a class="btn btn-default t3js-modal-trigger"
-							   href="{f:uri.action(action: 'delete', controller: 'Application', arguments: '{application: application.uid}')}"
-							   data-severity="warning"
-							   title="{f:translate(key: 'LLL:EXT:core/Resources/Private/Language/locallang_mod_web_list.xlf:delete')}"
-							   data-title="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang_alt_doc.xlf:label.confirm.delete_record.title')}"
-							   data-content="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang_alt_doc.xlf:deleteWarning')}"
-							   data-button-close-text="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang_alt_doc.xlf:buttons.confirm.delete_record.no')}">
-								<core:icon identifier="actions-delete" />
-							</a>
-						</div>
-					</td>
-				</tr>
-			</f:for>
-			</tbody>
-		</table>
-	</div>
+					<tbody>
+					<f:for each="{applications}" as="application">
+						<tr>
+							<td class="col-icon nowrap">
+								<core:iconForRecord table="tx_auth0_domain_model_application" row="{application}"/>
+							</td>
+							<td class="text-nowrap">{application.uid}</td>
+							<td data-order="{application.title}" class="col-title col-responsive nowrap">
+								<be:link.editRecord uid="{application.uid}" table="tx_auth0_domain_model_application">
+									{application.title}
+								</be:link.editRecord>
+							</td>
+							<td class="col-control nowrap">
+								<div class="btn-group" role="group">
+									<be:link.editRecord uid="{application.uid}" table="tx_auth0_domain_model_application"
+														class="btn btn-default">
+										<core:icon identifier="actions-open" size="small"/>
+									</be:link.editRecord>
+									<a class="btn btn-default t3js-modal-trigger"
+									   href="{f:uri.action(action: 'delete', controller: 'Application', arguments: '{application: application.uid}')}"
+									   data-severity="warning"
+									   title="{f:translate(key: 'LLL:EXT:core/Resources/Private/Language/locallang_mod_web_list.xlf:delete')}"
+									   data-title="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang_alt_doc.xlf:label.confirm.delete_record.title')}"
+									   data-content="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang_alt_doc.xlf:deleteWarning')}"
+									   data-button-close-text="{f:translate(key: 'LLL:EXT:backend/Resources/Private/Language/locallang_alt_doc.xlf:buttons.confirm.delete_record.no')}">
+										<core:icon identifier="actions-delete" />
+									</a>
+								</div>
+							</td>
+						</tr>
+					</f:for>
+					</tbody>
+				</table>
+			</div>
+		</f:then>
+		<f:else>
+			<f:be.infobox title="{f:translate(key: 'LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.infobox.title')}" state="-1">
+				<p>
+					<f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_mod.xlf:application.infobox.content" />
+				</p>
+			</f:be.infobox>
+		</f:else>
+	</f:if>
 
 	<be:link.newRecord table="tx_auth0_domain_model_application" class="btn btn-default" pid="{pid}" returnUrl="{returnUrl}">
 		<core:icon identifier="actions-document-new" size="small"/>
