[BUGFIX] Crop backend login image

--- a/Resources/Private/Layouts/Login.html
+++ b/Resources/Private/Layouts/Login.html
@@ -87,7 +87,7 @@
 						<div class="typo3-login-copyright-wrap">
 							<a href="https://www.auth0.com" target="_blank" class="typo3-login-copyright-link collapsed" data-toggle="collapse" aria-expanded="false" aria-controls="loginCopyright">
 								<span><f:translate key="LLL:EXT:auth0/Resources/Private/Language/locallang_be.xlf:form.login.copyright" /></span>
-								<f:image src="EXT:auth0/Resources/Public/Images/logo-blue.png" height="20" />
+								<f:image src="EXT:auth0/Resources/Public/Images/logo-blue.png" height="20c" />
 							</a>
 							<div id="loginCopyright" class="collapse">
 								<div class="typo3-login-copyright-text">
